# GalerkinMethodForElasticWaves2D

./: CMakeLists.txt  FileWriter.cpp  FileWriter.h  GalerkinMethodForElasticWaves2D.pro  MyMath.h  NewRectangle.cpp  NewRectangle.h  ProblemSolver.cpp  ProblemSolver.h  Rectangle.cpp  Rectangle.h  RectangleMesh.cpp  RectangleMesh.h  Solver.cpp  Solver.h  SourceWrapper.cpp  SourceWrapper.h  Support.cpp  Support.h  SystemMaker.cpp  SystemMaker.h  SystemSolver.cpp  SystemSolver.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp  systemSolver.cpp  systemSolver.h
